# rusty-spider

./: Cargo.toml  README.md
src/: main.rs
src/services/: date.rs
static/css/: basic.css
static/css/pages/: index.css  introduction-animation.css  introduction.css
static/css/partials/: footer.css  header.css
templates/layouts/: base.html.tera
templates/pages/: index.html.tera
templates/partials/: footer.html.tera  header.html.tera  introduction-animation.html.tera
