[package]
name = "rusty-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = {version = "0.2.0", features = ["tera"]}
rocket_db_pools = {version = "0.2.0", features = ["deadpool_postgres"]}
serde = "1.0.209"
chrono = "0.4.38"
rand = "0.8.5"